--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "@types/busboy": "^0.2.3",
     "@types/chai": "^4.1.7",
     "@types/chai-http": "^3.0.5",
+    "@types/form-data": "^2.2.1",
     "@types/got": "^9.4.1",
     "@types/mocha": "^5.2.6",
     "@types/sinon": "^7.0.8",
     "chai": "^4.2.0",
     "eslint": "^5.14.0",
+    "form-data": "^2.3.3",
     "got": "^9.6.0",
     "mocha": "^5.2.0",
     "nyc": "^13.3.0",
