--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint": "^5.14.0",
     "form-data": "^2.3.3",
     "got": "^9.6.0",
+    "md5-file": "^4.0.0",
     "mocha": "^5.2.0",
     "nyc": "^13.3.0",
     "pino-pretty": "^2.5.0",
